k8s/memory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: memory-app
  replicas: 1
  template:
    metadata:
      name: memory-app
      labels:
        app: memory-app
    spec:
      containers:
        - name: memory-app
          image: wojciechsak/memory:1.0
