k8s/memory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memory-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: memory-app
      port:
        number: 80
  rules:
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memory-app
                port:
                  number: 8080
